# Reic

./: .gitignore  AI_POLICY.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  meson.build  meson_options.txt
src/: main.c  meson.build
src/ast/: ast.c  ast.h
src/codegen/: codegen.c  codegen.h  codegen_expr.c  codegen_internal.h  codegen_stmt.c
src/collect/: hashset.h  strbuf.h  vector.h
src/diag/: diag.c  diag.h
src/hir/: hir.c  hir.h  hir_lower.c  hir_lower.h
src/lexer/: lexer.c  lexer.h
src/parser/: parser.c  parser.h  parser_decl.c  parser_expr.c  parser_internal.h  parser_stmt.c
src/sema/: sema.c  sema.h  sema_decl.c  sema_expr.c  sema_internal.h  sema_stmt.c
src/token/: token.c  token.h
src/type/: type.c  type.h
tests/: meson.build  test.h  test_codegen.c  test_lexer.c  test_parser.c  test_sema.c
